[package]
name = "voyage-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "voyage"
path = "src/main.rs"

[dependencies]
voyage-core = { path = "../voyage-core" }
voyage-embed = { path = "../voyage-embed" }
voyage-parser = { path = "../voyage-parser" }
voyage-graph = { path = "../voyage-graph" }
voyage-store = { path = "../voyage-store" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs-next = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
