[package]
name = "voyage-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
voyage-core = { path = "../voyage-core" }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
dirs-next = "2"
